[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sndtk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pathspec>=0.12.1", "pydantic>=2.12.4", "tomli>=2.0.1"]
authors = [{ name = "Mirei Itaya", email = "mirei.itaya@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["test", "coverage", "specification", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[project.scripts]
sndtk = "sndtk.__main__:cli"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "ruff>=0.14.5",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "B006",
]

[tool.sndtk]
exclude = ["*_test.py", "conftest.py"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
python_functions = ["test__*"]
python_classes = ["Test*"]
pythonpath = ["."]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.hatch.envs.test]
python = ["3.11", "3.12", "3.13", "3.14", "3.15"]
dependencies = ["pytest>=8.0.0"]
